implemented tests and route for get all settings
