# docs/api.yml
@@ -8,7 +8,7 @@ info:
     - The [MOCBOT API](https://github.com/MasterOfCubesAU/mocbot-api) repository
   contact:
     email: masterofcubesau@gmail.com
-  version: 1.4.5
+  version: 1.4.6
 externalDocs:
   description: Find out more about MOCBOT
   url: https://mocbot.masterofcubesau.com
@@ -25,8 +25,10 @@ tags:
     description: Guild Warning operations
   - name: Warnings
     description: General Warning operations
-  - name: Settings
+  - name: Guild Settings
     description: Guild Settings operations
+  - name: Settings
+    description: Other Settings operations
   - name: Guild Verification
     description: Guild Verification operations
   - name: User Verification
@@ -265,10 +267,26 @@ paths:
           $ref: '#/components/responses/NotAuthorized'
         '404':
           description: Guild/User ID not found
+  /settings:
+    get:
+      tags:
+        - Settings
+      summary: Fetches the settings for all servers in the database
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AllSettings'
+        '401':
+          $ref: '#/components/responses/NotAuthorized'
+        '404':
+          description: No server settings found in database
   /settings/{guild_id}:
     post:
       tags:
-        - Settings
+        - Guild Settings
       summary: Creates a settings entry for a server
       parameters:
         - name: guild_id
@@ -299,7 +317,7 @@ paths:
           description: Settings for the guild already exist
     get:
       tags:
-        - Settings
+        - Guild Settings
       summary: Fetches the current settings for a server
       parameters:
         - name: guild_id
@@ -321,7 +339,7 @@ paths:
           description: Guild ID not found
     patch:
       tags:
-        - Settings
+        - Guild Settings
       summary: Updates an existing settings for a server
       requestBody:
         description: An object with only the settings to update for this guild
@@ -352,7 +370,7 @@ paths:
           description: Guild ID not found
     put:
       tags:
-        - Settings
+        - Guild Settings
       summary: Replaces an existing settings configuration with a new configuration
       parameters:
         - name: guild_id
@@ -383,7 +401,7 @@ paths:
           description: Guild ID not found
     delete:
       tags:
-        - Settings
+        - Guild Settings
       summary: Removes a configuration entry for a server
       parameters:
         - name: guild_id
@@ -1399,6 +1417,17 @@ components:
           type: string
           description: The ID of the administrator who distributed the warning
           example: '124'
+    AllSettings:
+      type: array
+      items:
+        type: object
+        properties:
+          GuildID:
+            type: string
+            description: The guildID of the server
+            example: '123'
+          SettingsData:
+            $ref: '#/components/schemas/Settings'
     Settings:
       type: object
       additionalProperties: true
